# flask_blog_app

./: .gitignore  README.md  app.py  app_factory.py  extensions.py  forms.py  models.py  pyproject.toml  utils.py
instance/: posts.db
pythoncodes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: about.html  base.html  contact.html  footer.html  header.html  index.html  login.html  make-post.html  post.html  register.html
views/: blog_views.py  user_views.py
