[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pythoncodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = [
    "bleach>=6.3.0",
    "bootstrap-flask>=2.5.0",
    "djlint>=1.36.4",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-ckeditor>=1.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.11",
    "pyperclip>=1.11.0",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]
